--- a/index1.html
+++ b/index1.html
@@ -6,47 +6,42 @@
     <title>Child Location Tracking</title>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    <style>
+        #map { height: 500px; width: 100%; }
+    </style>
+</head>
+<body>
+    <h2>Child Location Tracking</h2>
+    <div id="map"></div>
+
     <script>
         function initMap() {
-            if (navigator.geolocation) {
-                navigator.geolocation.watchPosition(function(position) {
-                    var latitude = position.coords.latitude;
-                    var longitude = position.coords.longitude;
+            if ("geolocation" in navigator) {
+                navigator.geolocation.watchPosition(
+                    function (position) {
+                        var latitude = position.coords.latitude;
+                        var longitude = position.coords.longitude;
 
-                    var map = L.map('map').setView([latitude, longitude], 15);
-                    
-                    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-                        attribution: '&copy; OpenStreetMap contributors'
-                    }).addTo(map);
+                        var map = L.map('map').setView([latitude, longitude], 15);
 
-                    L.marker([latitude, longitude]).addTo(map)
-                        .bindPopup("Your Current Location")
-                        .openPopup();
-                }, function(error) {
-                    console.error("Error getting location: ", error.message);
-                });
+                        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                            attribution: '&copy; OpenStreetMap contributors'
+                        }).addTo(map);
+
+                        var marker = L.marker([latitude, longitude]).addTo(map)
+                            .bindPopup("Your Current Location")
+                            .openPopup();
+                    },
+                    function (error) {
+                        alert("Error getting location: " + error.message);
+                    }
+                );
             } else {
-                console.log("Geolocation is not supported by this browser.");
+                alert("Geolocation is not supported by your browser.");
             }
         }
+
+        window.onload = initMap;
     </script>
-</head>
-<body onload="initMap()">
-    <h2>Child Location Tracking</h2>
-    <div id="map" style="height: 500px; width: 100%;"></div>
-
-    <h3>Enter Your Details</h3>
-    <form action="#" method="POST">
-        <label for="child-name">Child's Name:</label>
-        <input type="text" id="child-name" name="child_name" required>
-
-        <label for="parent-email">Parent's Email:</label>
-        <input type="email" id="parent-email" name="parent_email" required>
-
-        <label for="contact">Contact Number:</label>
-        <input type="tel" id="contact" name="contact" required>
-
-        <button type="submit">Submit</button>
-    </form>
 </body>
 </html>
